[FIX] workflow: Adding dependencies

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,8 @@ name: test Odoo
 
 on:
     push:
-        branches: ["12.0"]
+        branches: ["11.0", "12.0", "13.0"]
     pull_request:
-        branches: ["12.0"]
 
 jobs:
     test:
