--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,2 @@
 # generated from manifests external_dependencies
+git+https://github.com/tegin/cb-addons.git@14.0#subdirectory=setup/mgmtsystem_indicators_report
