Update from template

--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,24 +1,22 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.14.2
+_commit: v1.17.2
 _src_path: https://github.com/OCA/oca-addons-repo-template.git
 ci: GitHub
-dependency_installation_mode: PIP
 generate_requirements_txt: true
-github_check_license: true
+github_check_license: false
 github_ci_extra_env: {}
 github_enable_codecov: true
 github_enable_makepot: false
-github_enable_stale_action: true
-github_enforce_dev_status_compatibility: true
+github_enable_stale_action: false
+github_enforce_dev_status_compatibility: false
 include_wkhtmltopdf: false
+odoo_test_flavor: Both
 odoo_version: 14.0
 org_name: CreuBlanca
 org_slug: tegin
 rebel_module_groups: []
-repo_description: null
+repo_description: TODO
 repo_name: CB Maintenance modules
 repo_slug: cb-maintenance
 repo_website: https://github.com/tegin/cb-maintenance
-travis_apt_packages: []
-travis_apt_sources: []
 
